--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -73,8 +73,34 @@
 
         //Add event listener to the button, making sure it can only submit when all fields have been filled out
         submitButton.addEventListener("click", function() {
-
+            //Below checks that all fields have been filled out.
+            if (departureDate.value === "" || destinationCity.value === "" || travelerName.value === "" || phoneNumber.value === ""|| emailAddress === "") {
+                alert("Please make sure to fill out all the fields.")
+            }
+            //Below makes sure that the email address has an @ in it.
+            var emailInput = emailAddress.value;
+            var validEmailCheck = emailInput.indexOf("@")
+            if (validEmailCheck < 0) {
+                alert("Please enter a valid email address.");
+            }
+            //Below makes sure that the info entered in the phone number section is a number.
+            var phoneNumberInput = phoneNumber.value;
+            if (phoneNumberInput / 1 !== phoneNumberInput) {
+                alert("Please enter a valid phone number.")
+            }
+            else submitInformation(); //This calls the function that submits the entered information to the php!
         })
+
+
+        function submitInformation() {
+            var flightBuddyFormInfo = {
+                submittedDate: departureDate.value,
+                submittedCity: destinationCity.value,
+                submittedName: travelerName.value,
+                submittedPhone: phoneNumber.value,
+                submittedEmail: emailAddress.value
+            };
+        }
 
     </script>
 </body>
