--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <style>
 
-        * {
+        /* * {
         outline: 1px solid red;
-        }
+        } */
 
         body {
             margin: 0px;
@@ -19,6 +19,11 @@
 
         p {
             margin: 10px;
+        }
+
+        img {
+            max-width: 100%;
+            max-height: 100%;
         }
 
         .inputwrapper {
@@ -32,6 +37,7 @@
     </style>
 </head>
 <body>
+    <div id="flightbuddyimage"><img src="https://ypaprescue.files.wordpress.com/2017/03/slide3-e1489734714235.jpg"></div>
     <!-- Below is the text taken straight from the YPAP page. -->
     <p>
         Couriers are people flying internationally who are willing to check in a dog under their name at the airport. The pound will arrange everything and there is no cost to you. Usually only DIRECT flights work for sending an animal on a plane due to long flight times and airline regulations. If you are not flying direct, please let us know and we can try to arrange a dog to fly IN CABIN with you, under the seat. Most commonly we need flights to SFO, LAX, JFK, SEA, ORD, IAD, YVR, YYZ, VIE, MUC.
@@ -68,6 +74,7 @@
         var travelerName = document.querySelector("#name");
         var phoneNumber = document.querySelector("#phonenum");
         var emailAddress = document.querySelector("#email");
+
         //The variable for the submit button.
         var submitButton = document.querySelector("#submitbutton");
 
@@ -91,8 +98,9 @@
             else submitInformation(); //This calls the function that submits the entered information to the php!
         })
 
-
+        //Below is only called when the submit button is clicked and all the conditions are met!
         function submitInformation() {
+            //Below is the package of all the information in the fields.
             var flightBuddyFormInfo = {
                 submittedDate: departureDate.value,
                 submittedCity: destinationCity.value,
