Finished JS, added image and formatted the overall page.

--- a/newsletters.html
+++ b/newsletters.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        * {
+        /* * {
             outline: 1px solid red;
-        }
+        } */
         body {
             margin: 0px;
             padding: 0px;
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div id="everythingwrapper">
-        <div id="newsletterimage">Image file here</div>
+        <div id="newsletterimage"><img src="https://i.pinimg.com/originals/94/82/8c/94828c92162ce22515b7807e81356416.jpg"></div>
         <!-- Below is the text, made up to sound kind of right. -->
         <div id="text">
             Want to stay up-to-date with everything that's happening at the Yongin Pound? Subscribe to our newsletter and get regular updates on volunteer opportunities and news about our cuddly friends!
@@ -78,7 +78,23 @@
             }
         })
 
-
+        //Below is only called when the sign up button is clicked and all the conditions are met!
+        function signUpNewsLetter() {
+            //Below is the package of all the information in the fields.
+            var newsLetterSignUpInfo = {
+                whosubscribed: signUpName.value,
+                emailwhosubscribed: signUpEmail.value
+            };
+            var newsLetterAjax = new XMLHttpRequest();
+            newsLetterAjax.onreadystatechange = function() {
+                if (newsLetterAjax.readyState === 4 && newsLetterAjax.status === 200) {
+                    alert("Thank you. You have been signed up for our regular newsletter.");
+                }
+            }
+            var outGoingNewsLetterInfo = JSON.stringify(newsLetterSignUpInfo);
+            newsLetterAjax.open("POST", "mailingsignupinfo.php");
+            newsLetterAjax.send(outGoingNewsLetterInfo);
+        }
     </script>
 </body>
 </html>
