new media queries

--- a/contactus_d2.html
+++ b/contactus_d2.html
@@ -10,7 +10,99 @@
 
 <style>
 
- @media screen and (max-width:640px) {
+ @media screen and (min-width:481px) {
+
+    body{
+        font-family: Verdana;
+    }
+
+    #intro{
+        display: inline-block;
+        padding-top: 10px;
+        margin: 1% 0% 2% 3%;
+        color: #0e5ba9;
+        font-size: 20px;
+        font-weight: normal;
+        line-height: 18px;
+        height: 28px;
+        width: 70%;
+    }
+
+    .requiredSymbol{
+        color: red;
+        font-size: 100%;
+    }
+
+    .fieldNameForm{
+        display: block;
+        font-size: 100%;
+        color: grey;
+        margin-left: 2%;
+        padding-top: 10px;
+    }
+
+    #intro_text{
+        width: 100%;
+        margin: 2% 0% 4% 2%;
+        font-family: Verdana;
+        font-style: italic;
+        color: grey;
+        font-size: 13px;
+    }
+    
+    #list {
+        display: block;
+        padding: 5px;
+        margin: 8px 0px 8px 18px;
+        border-radius: 3px;
+        border: 1px solid grey;
+        width: 62%;
+    }
+
+    input {
+        display: block;
+        padding: 7px;
+        margin: 12px 0px 10px 18px;
+        border: 1px solid grey;
+        border-radius: 3px;
+        width: 60%;
+    }
+ 
+    #textarea_contact{
+        word-break: keep-all;
+        font-family: monospace; 
+        box-sizing: border-box;
+        height: 90px;
+        width: 62%;
+        margin: 2% 0% 0% 2%;
+        font-size: 12px;
+        margin-bottom: 10%;
+        background: #f8f8f8;
+        border-radius: 3px;
+        border: 1.5px  rgb(169, 169, 169) solid;
+    }
+
+    select{
+        color: #0e5ba9;
+    }
+
+    #submitButton{
+        color: white;
+        font-weight: bold;
+        background-color: #0e5ba9;
+        width: 150px;
+        height: 50px;
+        margin-left: 25%;
+    }
+
+    #form_field_texmess_line{
+        margin-bottom: -8%;
+    }
+
+}
+
+
+@media screen and (max-width:481px) {
 
     body{
         font-family: Verdana;
@@ -49,7 +141,7 @@
         color: grey;
         font-size: 12px;
     }
-    
+
     #list {
         display: block;
         padding: 5px;
@@ -84,11 +176,22 @@
 
     select{
         color: #0e5ba9;
-        width: 10px;
-        border: 1px solid grey;
     }
 
+    #submitButton{
+        color: white;
+        font-weight: bold;
+        background-color: #0e5ba9;
+        width: 100px;
+        height: 50px;
+        margin: auto;
+    }
+
+    #form_field_texmess_line{
+        margin-bottom: -8%;
+    }
 }
+
 </style>
 </head>
 
@@ -167,6 +270,7 @@
                     </div><!-- form_field_texmess_line -->
 
                 </div><!-- fields_form_box -->        
+                <input type="submit" value="Submit" id="submitButton">
             </form><!-- end  form-box -->
         </div><!-- from container -->
 
