I added some css for the hero_image.

--- a/volunteer_page.html
+++ b/volunteer_page.html
@@ -30,7 +30,9 @@ body{
     margin: 0;
 }
 #hero_wrapper{
-
+    width: 100%;
+    position: absolute;
+    top: -250px;
 }
 #donateTitle{
     color: blue;
@@ -56,6 +58,10 @@ a{
 }
 #wrapper{
     background: white;
+    background: white;
+    position: relative;
+    top: 16em;
+    padding-top: 1em;
 }
 
 
