--- a/foster.html
+++ b/foster.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-                * {
-        outline: 1px solid red;
+        * {
+            outline: 1px solid red;
         }
         body {
             margin: 0px;
             padding: 0px;
             font-family: sans-serif;
-        }
-        img {
-            max-width: 100%;
-            max-height: 100%;
         }
         #text {
             display: inline-block;
@@ -28,6 +24,9 @@
         .inputwrapper {
             margin: 15px;
         }
+        #otherinfo {
+            width: 85%;
+        }
         #submitbuttonwrapper {
             margin: 20px;
         }
@@ -36,12 +35,15 @@
                 display: flex;
                 justify-content: center;
             }
+            #otherinfo {
+                width: 400px;
+            }
         }
     </style>
 </head>
 <body>
     <div id="everythingwrapper">
-        <div id="flightbuddyimage"><img src="https://ypaprescue.files.wordpress.com/2017/03/slide3-e1489734714235.jpg"></div>
+        <div><img id="fosterimage" src="https://ypaprescue.files.wordpress.com/2018/05/kakaotalk_20180507_153251433-e1525766428832.jpg?w=330&h=240&crop=1"></div>
         <!-- Below is the text taken straight from the YPAP page. -->
         <div id="text">
             <div id="rundown">Fostering is temporarily caring for a dog as if it were your own. Fosters are people who have time and love to give, but can’t commit to a dog forever.
@@ -78,7 +80,7 @@
             <input type="text" id="name">
         </div>
         <div class="inputwrapper" id="phonenumwrapper">
-            <div class="fielddesc">Traveler's phone number</div>
+            <div class="fielddesc">Your phone number</div>
             <input type="text" id="phonenum">
         </div>
         <div class="inputwrapper" id="emailwrapper">
@@ -87,7 +89,7 @@
         </div>
         <div class="inputwrapper" id="addresswrapper">
             <div class="fielddesc">Your home address</div>
-            <input type="text" id="email">
+            <input type="text" id="address">
         </div>
         <div class="inputwrapper" id="startdatewrapper">
             <div class="fielddesc">Start of availability date</div>
@@ -99,11 +101,25 @@
         </div>
         <div class="inputwrapper" id="otherinfowrapper">
             <div class="fielddesc">Please let us know if there are any special circumstances that need to be considered before we ask you to foster a dog. (Children in the home, other pets, living space avilability, etc.)</div>
-            <input type="textarea" id="otherinfo">
+            <textarea name="otherinfo" id="otherinfo" rows="5"></textarea>
         </div>
         <div id="submitbuttonwrapper"><input id="submitbutton" type="button" value="Submit application"></div>
     </div>
     <script>
+        //The variables pointing towards each input field.
+        var applicantName = document.querySelector("#namewrapper");
+        var phoneNumber = document.querySelector("#phonenum");
+        var emailAddress = document.querySelector("#email");
+        var homeAddress = document.querySelector("#address");
+        var startDate = document.querySelector("#startdate");
+        var endDate = document.querySelector("#enddate");
+        var otherInfo = document.querySelector("#otherinfo");
+        //The variable for the submit button.
+        var submitButton = document.querySelector("#submitbutton");
+        //Add event listener to the button, making sure it can only submit when all fields have been filled out
+        submitButton.addEventListener("click", function() {
+            
+        })
     </script>
 </body>
 </html>
