Minor variable tweak on date function

--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -109,7 +109,7 @@
                     mmGotten="0"+mmGotten;
                 }
             todayDate = yyyyGotten+'-'+mmGotten+'-'+dateOffset;
-            document.getElementById("startdate").setAttribute("min", todayDate);
+            departureDate.setAttribute("min", todayDate);
         }
         getDate();
 
