Some minor CSS tweaks

--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -39,13 +39,19 @@
             margin: 20px;
         }
 
+        input, textarea {
+            outline: 1px solid black;
+        }
+
         @media screen and (min-width: 481px) {
 
             #everythingwrapper {
                 display: flex;
                 justify-content: center;
             }
-
+            input, textarea {
+                outline: none;
+            }
         }
 
     </style>
