Some minor CSS tweaks

--- a/newsletters.html
+++ b/newsletters.html
@@ -25,6 +25,9 @@
         .inputwrapper {
             margin: 15px;
         }
+        input, textarea {
+            outline: 1px solid black;
+        }
         #submitbuttonwrapper {
             margin: 20px;
         }
@@ -32,6 +35,9 @@
             #everythingwrapper {
                 display: flex;
                 justify-content: center;
+            }
+            input, textarea {
+                outline: none;
             }
         }
     </style>
