--- a/aboutus.html
+++ b/aboutus.html
@@ -23,10 +23,10 @@
             padding: 10px;
         }
         @media screen and (min-width: 481px) {
-            #everythingwrapper {
+            /* #everythingwrapper {
                 display: flex;
                 justify-content: center;
-            }
+            } */
         }
     </style>
 </head>
@@ -39,9 +39,12 @@
             <h2>Animal Welfare in Korea</h2>
             Yongin Pound is located in Yongin City, Gyonggi Province, South Korea. South Korea’s animal welfare laws are weak by international standards, receiving some of the lowest scores by the World Organisation for Animal Health (OIE).
             <br>
+            <br>
             The structure of the legislation, as well as significant cultural hindrance, have created a barrier to improvement in protecting companion animals. While there is an Animal Protection Act in place, there are no enforcement mechanisms for breach of the duty of care, no powers to ban people from owning animals if they have been convicted of cruelty, and no way to impose higher penalties on repeat offenders. Dogs also continue to be farmed for meat and consumed in South Korea. Over two million dogs are consumed every year and even pet dogs are often sold into the trade and killed in brutal ways.
             <br>
+            <br>
             Yongin Pound has an average of 7 abandoned, stray, meat farm, or lost dogs brought to the pound everyday. The pound faces a constant uphill battle due to a fundamental problem in Korea: the supply of dogs exceeds demand. The pound cannot refuse any dog that is sent there by the city or by citizens, and as a result Yongin Pound suffers from overpopulation.
+            <br>
             <br>
             Typically, pounds in Korea euthanize dogs that have been at the shelter for ten days, once the legally-required holding time expires (a time when owner can search for their lost pet). Not wanting to operate as a kill factory, YPAP is one of the few pounds that does not euthanize. This is possible because of two ladies, Diksene and Clala, who started a local adoption support group of over 2,000 members called Yongin Animal Protection Association. After the dog’s ten days are up, the community “adopts” the dogs temporarily to give them more time to find homes.
             <h3>The Yongin Animal Protection Association has given these animals a second chance. Now we, the international rescue community, are joining them to help find families for the unwanted and abandoned dogs of Korea.</h3>
